--- a/website/templates/patientmedinfo-medications.html
+++ b/website/templates/patientmedinfo-medications.html
@@ -27,157 +27,81 @@
 
 
             <!-- PRESCRIPTION FORM-->
-            {% comment %} <div class="title-form"></div> {% endcomment %}
-          
-
-            {% comment %} <form method="POST" id="additsem-form">
-              {% csrf_token %}
-              <a class="btn btn-outline-success" style="margin-left:20px;margin-top:10px;"   type="button" data-bs-toggle="modal" data-bs-target="#searchmedicine"><i class="bi bi-search"></i> Search medicine</a>
-              <a class="btn btn-success"style="margin-left:5px;margin-top:10px;"   type="button" data-bs-toggle="modal" data-bs-target="#print_report">
-                <i class="bi bi-printer-fill"></i>Print Prescription
-              </a>
-              <div class="reg-row">
-                <div class="medicine-col" style="width:100%;">
-
-                  {% if medselected %}
-                  
-                              <label class="reg-label">Medicine Name</label><br />
-                              <input class="medicine-input" list="medlist" name="medName" value="{{medselected.medicine_name}}" required />
-                              <datalist id="medlist">
-                                {% for medListItem in medicines_list %}
-                                <option value="{{medListItem.medicine_name}}">
-                                  {% endfor %}
-                              </datalist>
-                            </div>
-
-                            <div class="medicine-col">
-                              <label class="reg-label">Dosage</label><br />
-                              <input class="medicine-input" name="dosage" value="{{medselected.dosage}}" required />
-                            </div>
-
-                            <div class="medicine-col">
-                              <label class="reg-label">Quantity</label><br />
-                              <input class="medicine-input" name="qtyvalue" style="width:80%;" required />
-                            </div>
-
-                  {% else %}
-
-                            <label class="reg-label">Medicine Name</label><br />
-                            <input class="medicine-input" list="medlist" name="medName" required />
-                            <datalist id="medlist">
-                              {% for medListItem in medicines_list %}
-                              <option value="{{medListItem.medicine_name}}">
-                                {% endfor %}
-                            </datalist>
-                          </div>
-
-                          <div class="medicine-col">
-                            <label class="reg-label">Dosage</label><br />
-                            <input class="medicine-input" name="dosage" required />
-                          </div>
-
-                          <div class="medicine-col">
-                            <label class="reg-label">Quantity</label><br />
-                            <input class="medicine-input" name="qtyvalue" style="width:80%;" required />
-                          </div>
-
-                  {% endif %}
-                  
-
-
-              </div>
-              <br>
-              <div class="reg-row" style="padding-top:0px">
-
-                <div class="medicine-col">
-                  <label class="reg-label">7AM</label><br />
-                  <input class="medicine-input" name="am" required />
-                </div>
-
-                <div class="medicine-col">
-                  <label class="reg-label">1PM</label><br />
-                  <input class="medicine-input" name="noon" required />
-                </div>
-
-                <div class="medicine-col">
-                  <label class="reg-label">5PM</label><br />
-                  <input class="medicine-input" name="pmvalue" required />
-                </div>
-
-                <div class="medicine-col">
-
-                  <button class="btn-addmed btn-success mt-4 p-2" type="submit" name="addtoprescription">add to prescription</button>
-
-                </div>
-
-              </div>
-
-            </form> {% endcomment %}
+           
 
             <form method="POST">
               {% csrf_token %}
-            <div class="m-3">
-                <label>Medicine/Preparation</label>
-                <div class="row g-3">
-                  <div class="col">
-                    <input type="text" class="form-control" placeholder="medicine name" name="medname">
-                  </div>
-                  <div class="col">
-                    <input type="text" class="form-control" placeholder="ex. mg/ml" name="medsize">
-                  </div>
-                </div>
-            </div>
 
-            <div class="m-3">
-              <label>Subscription</label>
-              <div class="row g-3">
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="generic brand" name="medgenname">
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="total quantity" name="medtotalqty">
+              <div class="row m-3">
+                <div class="col-md-4">
+                 <label class="form-label">Medicine/Preparation</label>
+                 <input type="text" class="form-control  mt-2" placeholder="medicine name" name="medname">
+               </div>
+               <div class="col-md-4">
+                <label for="inputZip" class="form-label"></label>
+                 <input type="text" class="form-control mt-3" placeholder="generic brand" name="medgenname">
+               </div>
+               <div class="col-md-4">
+                 <label for="inputZip" class="form-label"></label>
+                 <input type="text" class="form-control mt-3" placeholder="ex. mg/ml" name="medsize">
+               </div>
+             </div>
+
+
+
+
+          <div class="row m-3">
+             <div class="col g-3">
+              <label for="inputCity" class="form-label">Transcription(Dosage)</label>
+              <div class="input-group mb-3">            
+                  <input type="number" class="form-control" id="inputCity" placeholder="quantity" name="medqty" >
+                  <div class="input-group-append">
+                    <select id="inputState" class="form-select" name="medtype">
+                    <option selected>Tablet</option>
+                    <option>Capsule</option>
+                    </select>
+                    </div>
+                <div class="input-group-append">
+                  <select id="inputState" class="form-select" name="perduration">
+                    <option selected>/Day</option>
+                    {% for unit in dosage_units %}
+                    <option>/{{unit.dosage_unit}}</option>
+                    {% endfor %}
+                  </select>
                 </div>
               </div>
-          </div>
-        
-          
-          <div class="row m-3">
-             <div class="col-md-4">
-              <label for="inputCity" class="form-label">Transcription(Dosage)</label>
-              <input type="text" class="form-control" id="inputCity" placeholder="quantity" name="medqty" >
             </div>
-            <div class="col-md-4">
-              <label for="inputState" class="form-label">Unit</label>
-              <select id="inputState" class="form-select" name="medunit">
-                <option selected>Choose...</option>
-                {% for unit in dosage_units %}
-                <option>{{unit.dosage_unit}}</option>
-                {% endfor %}
-              </select>
-            </div>
-            <div class="col-md-4">
+
+            <div class="col g-3">
               <label for="inputZip" class="form-label">Duration</label>
-              <select id="inputState" class="form-select" name="medduration">
-                <option selected>Choose...</option>
-                {% for unit in dosage_units %}
-                <option>{{unit.dosage_unit}}</option>
-                {% endfor %}
-              </select>
+              <div class="input-group mb-3">            
+                  <input type="number" class="form-control" id="inputCity" placeholder="quantity" name="durationqty" >
+                 
+                <div class="input-group-append">
+                  <select id="inputState" class="form-select" name="medduration">
+                    <option selected>Week(s)</option>
+                    {% for unit in dosage_units %}
+                    <option>/{{unit.dosage_unit}}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
             </div>
+
           </div>
 
           <div class="row m-3">
             <div class="col-md-4">
              <label for="inputCity" class="form-label">Morning</label>
-             <input type="text" class="form-control" id="inputCity" placeholder="" name="am" >
+             <input type="number" class="form-control" id="inputCity" placeholder="" name="am" >
            </div>
            <div class="col-md-4">
              <label for="inputState" class="form-label">Noon</label>
-             <input type="text" class="form-control" id="inputCity" placeholder="" name="noon" >
+             <input type="number" class="form-control" id="inputCity" placeholder="" name="noon" >
            </div>
            <div class="col-md-4">
              <label for="inputZip" class="form-label">Evening</label>
-             <input type="text" class="form-control" id="inputCity" placeholder="" name="pmvalue" >
+             <input type="number" class="form-control" id="inputCity" placeholder="" name="pmvalue" >
            </div>
          </div>
 
