--- a/website/templates/registrationpage.html
+++ b/website/templates/registrationpage.html
@@ -7,7 +7,13 @@
 
 <div class="container1">
   
-    {% include "settingsmenu.html " %}
+      <!--Left Menus-->
+        <div class="left-menu">
+          <div class="active-title">Menu</div>
+          <a href="{% url "medicationsettings" %}" >Medication Settings</a><hr>  
+          <a href="{% url "registrationpage" %}" class="active">Register New User</a><hr>    
+          
+        </div>
 
   <!--Add new patient form-->
   <div class="reg-area">
