--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -68,10 +68,10 @@
             <form method="POST">
                 {% csrf_token %}
             <label class="lbl-pname" style="margin-top: 20px;">USERNAME</label>
-            <input name="uName" class="value-pname" style="margin-top: 5px;width: 100%;padding:5px;"/>
+            <input name="uName" class="value-login" style="margin-top: 5px;width: 100%;padding:5px;"/>
             
             <label class="lbl-pname" style="margin-top: 20px;">PASSWORD</label>
-            <input name="pWord" type="PASSWORD" class="value-pname" style="margin-top: 5px;width: 100%;padding:5px;"/>
+            <input name="pWord" type="PASSWORD" class="value-login" style="margin-top: 5px;width: 100%;padding:5px;"/>
             
             <button class="btn btn-successs w-100 mt-3 mb-3">LOGIN</button>
             </form>
