--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -84,7 +84,7 @@
 
       {% block title %}
       <div class="lbl-details">
-        <h3>Medical History</h3>
+        <h3>Medical History <a href="{% url "comparepage" %}" class="btn btn-outline-primary">Compare</a></h3>
       </div>
       <hr>
 
