--- a/website/templates/patientmedinfo-medications.html
+++ b/website/templates/patientmedinfo-medications.html
@@ -3,7 +3,7 @@
 {% load custom_tags %}
 {% load static %}
 
-{% block btn-back %} <a href="{% url "patienttable" %}">
+{% block btn-back %} <a href="{% url "patientinfo" pID%}">
     <h4 style="color:black;"><i class="bi bi-arrow-left-square-fill"></i></h4>
 </a>{% endblock btn-back %}
 {% block title %}
